--- a/LazzyBee/Home/HomeViewController_iPad.xib
+++ b/LazzyBee/Home/HomeViewController_iPad.xib
@@ -11,7 +11,9 @@
                 <outlet property="btnIncoming" destination="K0P-2z-oXD" id="REA-7a-Js8"/>
                 <outlet property="btnMore" destination="E9M-1w-NbD" id="8HZ-2X-tVV"/>
                 <outlet property="btnStudy" destination="ENb-XN-REN" id="RgC-QT-ydm"/>
+                <outlet property="txtSearchbox" destination="dDX-fn-DnK" id="bnx-sA-tXC"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Nhc-yv-rys"/>
+                <outlet property="viewResultContainer" destination="x2s-0X-vss" id="9ak-xe-i47"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,11 +27,11 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="big_logo.png" id="RYI-sT-16O">
-                    <rect key="frame" x="224" y="31" width="320" height="350"/>
+                    <rect key="frame" x="224" y="101" width="320" height="350"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
                 <view contentMode="scaleToFill" id="Gbu-YY-Ul2">
-                    <rect key="frame" x="0.0" y="404" width="768" height="116"/>
+                    <rect key="frame" x="0.0" y="474" width="768" height="116"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="K0P-2z-oXD">
@@ -62,14 +64,48 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
+                <view hidden="YES" contentMode="scaleToFill" id="x2s-0X-vss">
+                    <rect key="frame" x="184" y="53" width="429" height="180"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" id="BXe-Pm-YHh">
+                    <rect key="frame" x="184" y="22" width="429" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="dDX-fn-DnK">
+                            <rect key="frame" x="0.0" y="0.0" width="400" height="30"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
+                            <connections>
+                                <action selector="textEditingChanged:" destination="-1" eventType="editingDidBegin" id="qio-Zj-Kfx"/>
+                                <action selector="textEditingChanged:" destination="-1" eventType="editingChanged" id="yMm-uS-7f5"/>
+                                <action selector="textEditingExit:" destination="-1" eventType="editingDidEnd" id="UUZ-O0-45J"/>
+                                <outlet property="delegate" destination="-1" id="eDP-1o-XdJ"/>
+                            </connections>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Xwk-et-d6M">
+                            <rect key="frame" x="399" y="0.0" width="30" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.23529411759999999" green="0.62745098040000002" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" image="ic_search_gray.png"/>
+                            <connections>
+                                <action selector="btnSearchClick:" destination="-1" eventType="touchUpInside" id="VzH-sq-cgA"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <point key="canvasLocation" x="259" y="336"/>
+            <point key="canvasLocation" x="339" y="326"/>
         </view>
     </objects>
     <resources>
         <image name="big_logo.png" width="1024" height="1024"/>
         <image name="button_long_ipad.png" width="667" height="40"/>
         <image name="button_short_ipad.png" width="300" height="40"/>
+        <image name="ic_search_gray.png" width="25" height="25"/>
     </resources>
 </document>
