--- a/LazzyBee/Home/HomeViewController.xib
+++ b/LazzyBee/Home/HomeViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="txtSearchbox" destination="523-A7-uj3" id="3CX-Cb-VDx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="viewResultContainer" destination="SxF-k5-VMT" id="EmM-x4-HPy"/>
+                <outlet property="viewSearchContainer" destination="1Zw-7a-cKC" id="t4d-SG-6xT"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -64,27 +65,34 @@
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="523-A7-uj3">
-                    <rect key="frame" x="8" y="33" width="270" height="35"/>
+                <view contentMode="scaleToFill" id="1Zw-7a-cKC">
+                    <rect key="frame" x="8" y="31" width="304" height="37"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
-                    <connections>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingChanged" id="RqF-pQ-BhA"/>
-                        <action selector="textEditingChanged:" destination="-1" eventType="editingDidBegin" id="pLa-Js-xAe"/>
-                        <action selector="textEditingExit:" destination="-1" eventType="editingDidEnd" id="Unn-Nq-bPt"/>
-                        <outlet property="delegate" destination="-1" id="fau-lT-3Oe"/>
-                    </connections>
-                </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="0vZ-Ul-0pa">
-                    <rect key="frame" x="277" y="33" width="35" height="35"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.23529411759999999" green="0.62745098040000002" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" image="ic_search_gray.png"/>
-                    <connections>
-                        <action selector="btnSearchClick:" destination="-1" eventType="touchUpInside" id="IhJ-99-6v2"/>
-                    </connections>
-                </button>
+                    <subviews>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="523-A7-uj3">
+                            <rect key="frame" x="5" y="1" width="264" height="35"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
+                            <connections>
+                                <action selector="textEditingChanged:" destination="-1" eventType="editingChanged" id="RqF-pQ-BhA"/>
+                                <action selector="textEditingChanged:" destination="-1" eventType="editingDidBegin" id="pLa-Js-xAe"/>
+                                <action selector="textEditingExit:" destination="-1" eventType="editingDidEnd" id="Unn-Nq-bPt"/>
+                                <outlet property="delegate" destination="-1" id="fau-lT-3Oe"/>
+                            </connections>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="0vZ-Ul-0pa">
+                            <rect key="frame" x="269" y="1" width="35" height="35"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" red="0.23529411759999999" green="0.62745098040000002" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                            <state key="normal" image="ic_search_gray.png"/>
+                            <connections>
+                                <action selector="btnSearchClick:" destination="-1" eventType="touchUpInside" id="IhJ-99-6v2"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </view>
                 <view hidden="YES" contentMode="scaleToFill" id="SxF-k5-VMT">
                     <rect key="frame" x="8" y="69" width="304" height="190"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
