--- a/LazzyBee/Home/HomeViewController_iPad.xib
+++ b/LazzyBee/Home/HomeViewController_iPad.xib
@@ -14,6 +14,7 @@
                 <outlet property="txtSearchbox" destination="dDX-fn-DnK" id="bnx-sA-tXC"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Nhc-yv-rys"/>
                 <outlet property="viewResultContainer" destination="x2s-0X-vss" id="9ak-xe-i47"/>
+                <outlet property="viewSearchContainer" destination="BXe-Pm-YHh" id="PTr-c5-9Fv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -65,11 +66,11 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
                 <view contentMode="scaleToFill" id="BXe-Pm-YHh">
-                    <rect key="frame" x="94" y="46" width="580" height="40"/>
+                    <rect key="frame" x="94" y="44" width="580" height="42"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="dDX-fn-DnK">
-                            <rect key="frame" x="0.0" y="0.0" width="541" height="40"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" id="dDX-fn-DnK">
+                            <rect key="frame" x="5" y="1" width="535" height="40"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="search"/>
@@ -81,7 +82,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Xwk-et-d6M">
-                            <rect key="frame" x="540" y="0.0" width="40" height="40"/>
+                            <rect key="frame" x="540" y="1" width="40" height="40"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.23529411759999999" green="0.62745098040000002" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                             <state key="normal" image="ic_search_gray.png"/>
